Splitting zookeeper into separate stack

--- a/kafka/kontena.yml
+++ b/kafka/kontena.yml
@@ -4,78 +4,94 @@ version: 1.0.0
 description: Kafka cluster based on Harvard Hypermap
 expose: kafka
 variables:
-  num_zookeeper_instances:
+  link_zookeeper:
+    type: boolean
+    default: true
+    from:
+      env: LINK_ZOOKEEPER
+      prompt: link zookeeper stack?
+  zookeeper_link:
+    type: string
+    only_if: link_zookeeper
+    from:
+      env: LINK_ZOOKEEPER
+      service_link:
+        prompt: Choose zookeeper
+        name: zookeeper
+  zookeeper_uri:
+    type: string
+    default: zookeeper.zookeeper-cluster.${GRID}.kontena.local:9092
+    skip_if: link_zookeeper
+    from:
+      env: ZOOKEEPER_URI
+      prompt: Zookeeper uri
+  num_instances:
     type: integer
     min: 1
     default: 3
     from:
-      env: NUM_ZOOKEEPER_INSTANCES
-      prompt: number of instances of Zookeeper?
-  num_kafka_instances:
-    type: integer
-    min: 1
-    default: 3
-    from:
-      env: NUM_KAFKA_INSTANCES
+      env: NUM_INSTANCES
       prompt: number of instances of Kafka?
   expose_kafka_port:
     type: boolean
     default: false
     from:
       env: EXPOSE_KAFKA_PORT
-      prompt: expose Kafka port to host?
+  skip_volumes:
+    type: boolean
+    default: false
+    from:
+      env: SKIP_VOLUMES
+  delete_topic_enable:
+    type: boolean
+    default: true
+    from:
+      env: DELETE_TOPIC_ENABLE
+  default_replication_factor:
+    type: integer
+    default: 2
+    from:
+      env: DEFAULT_REPLICATION_FACTOR
+  compression_type:
+    type: string
+    default: lz4
+    from:
+      env: COMPRESSION_TYPE
 
 services:
-  zookeeper:
-    image: harvardcga/zookeeper:3.4
-    stateful: true
-    volumes:
-      - zookeeper-data:/var/lib/zookeeper
-    instances: ${num_zookeeper_instances}
-    deploy:
-      wait_for_port: 2181
-      min_health: 0.5
-    environment:
-      # {% assign zookeeper_servers = "" %}
-      # {% for i in (1..num_zookeeper_instances) %}
-      # {%   capture server %}server.{{ i }}=zookeeper-{{ i }}.{{ STACK }}.{{ GRID }}.kontena.local:2888:3888 {% endcapture %}
-      # {%   assign zookeeper_servers = zookeeper_servers | append: server %}
-      # {% endfor %}
-      ZOO_SERVERS: {{ zookeeper_servers }}
-      ZOO_AUTOPURGE_PURGE_INTERVAL: 24
-      JMXPORT: 9999
-      SERVER_JVMFLAGS: -Xmx500M -XX:+CrashOnOutOfMemoryError
-    health_check:
-      protocol: tcp
-      port: 2181
-      timeout: 10
-      interval: 300
-      initial_delay: 10
-
   kafka:
-    image: harvardcga/cp-kafka:3.1.2-hcga2
-    links:
-      - zookeeper
+    image: kontena/kafka:latest
     stateful: true
+    # {% unless skip_volumes %}
     volumes:
       - kafka-data:/var/lib/kafka
-    instances: ${num_kafka_instances}
+    # {% endunless %}
+    instances: ${num_instances}
     # {% if expose_kafka_port %}
     ports:
       - "9092:9092"
     # {% endif %}
+    # {% if link_zookeeper %}
+    links:
+      - ${zookeeper_link}
+    # {% endif %}
     environment:
+      # {% assign zookeeper_connect = "" %}
+      # {% if link_zookeeper %}
+      # {%   assign parts = zookeeper_link | split: '/' %}
+      # {%   capture zookeeper_connect %}{{ parts[1] }}.{{ parts[0] }}.{{ GRID }}.kontena.local {% endcapture %}
+      # {% else %}
+      # {%   assign zookeeper_connect = zookeeper_uri %}
+      # {% endif %}
+      KAFKA_ZOOKEEPER_CONNECT: {{ zookeeper_connect }}
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka.${STACK}.${GRID}.kontena.local:9092
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper
-      KAFKA_DELETE_TOPIC_ENABLE: true
-      KAFKA_DEFAULT_REPLICATION_FACTOR: 2
-      KAFKA_COMPRESSION_TYPE: lz4
+      KAFKA_DELETE_TOPIC_ENABLE: ${delete_topic_enable}
+      KAFKA_DEFAULT_REPLICATION_FACTOR: ${default_replication_factor}
+      KAFKA_COMPRESSION_TYPE: ${compression_type}
       KAFKA_JMX_PORT: 9999
-
+# {% unless skip_volumes %}
 volumes:
-  zookeeper-data:
-    external:
-      name: ${STACK}-zookeeper-data
   kafka-data:
     external:
       name: ${STACK}-kafka-data
+# {% endunless %}
