--- a/kibana/kontena.yml
+++ b/kibana/kontena.yml
@@ -49,6 +49,6 @@ services:
       - ${loadbalancer}
       # {% endif %}
     secrets:
-      - secret: ELASTIC_PASSWORD
+      - secret: elastic-password
         name: ELASTICSEARCH_PASSWORD
         type: env
