--- a/drone/github.yml
+++ b/drone/github.yml
@@ -1,5 +1,5 @@
 stack: kontena/drone-github
-version: 0.2.0
+version: 0.2.1
 description: Drone is a Continuous Delivery platform built on Docker
 variables:
   loadbalancer:
@@ -95,6 +95,7 @@ services:
       - server
     environment:
       - DRONE_SERVER=ws://server:8000/ws/broker
+      - DOCKER_API_VERSION=1.24
     secrets:
       - secret: ${STACK}-secret
         name: DRONE_SECRET
